--- a/DXMauiApp1/AppShell.xaml
+++ b/DXMauiApp1/AppShell.xaml
@@ -23,5 +23,11 @@
             Icon="xamarin"
             Route="EmptyPage"
             Title="EmptyPage" />
+
+        <ShellContent
+            ContentTemplate="{DataTemplate pages:HomePage}"
+            Icon="xamarin"
+            Route="HomePage"
+            Title="HomePage" />
     </TabBar>
 </Shell>
