--- a/DXMauiApp1/Pages/HomePage.xaml
+++ b/DXMauiApp1/Pages/HomePage.xaml
@@ -13,9 +13,9 @@
                 Spacing="24">
 
                 <dxe:TextEdit 
-                    x:Name="TextEditAccount"
                     BoxPadding="18,16"
                     BorderThickness="0.9"
+                    ClearIconVisibility="Never"
                     CornerRadius="0"
                     DisabledBorderThickness="0.9"
                     ErrorText=" "
@@ -26,12 +26,46 @@
                     LabelText="匚匚匚匚"
                     Margin="0,-11,0,-16"
                     TextFontSize="17" />
+                
+                <dxe:MultilineEdit
+                    BoxPadding="18,16"
+                    BorderThickness="0.9"
+                    ClearIconVisibility="Never"
+                    CornerRadius="0"
+                    DisabledBorderThickness="0.9"
+                    ErrorText=" "
+                    FocusedBorderThickness="0.9"
+                    HelpText=" "
+                    IsErrorIconVisible="False"
+                    LabelFontSize="17"
+                    LabelText="匚匚匚匚"
+                    Margin="0,-11,0,-16"
+                    MinLineCount="4"
+                    TextFontSize="17" />
+
+                <dxe:NumericEdit 
+                    BoxPadding="18,16"
+                    BorderThickness="0.9"
+                    ClearIconVisibility="Never"
+                    CornerRadius="0"
+                    DisabledBorderThickness="0.9"
+                    ErrorText=" "
+                    FocusedBorderThickness="0.9"
+                    HelpText=" "
+                    IsErrorIconVisible="False"
+                    LabelFontSize="17"
+                    LabelText="匚匚匚匚"
+                    Margin="0,-11,0,-16"
+                    MaxDecimalDigitCount="4"
+                    TextFontSize="17"
+                    TextHorizontalAlignment="Start"
+                    AllowNullValue="True" />
 
                 <Grid
                     BackgroundColor="WhiteSmoke"
                     Margin="-24,0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="72" />
+                        <ColumnDefinition Width="75" />
                         <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
@@ -42,7 +76,6 @@
                     </Grid.RowDefinitions>
 
                     <Label
-                        FontSize="17"
                         Grid.Column="0"
                         Grid.Row="0"
                         HorizontalOptions="Center"
@@ -50,7 +83,6 @@
                         Text="匚匚匚" />
 
                     <Label
-                        FontSize="17"
                         Grid.Column="1"
                         Grid.Row="0"
                         HorizontalOptions="Center"
@@ -59,15 +91,14 @@
 
                     <Button 
                         x:Name="ButtonCreate"
-                        BackgroundColor="Navy"
                         Clicked="ButtonCreate_Clicked"
                         CornerRadius="0"
                         FontSize="17"
                         Grid.Column="2"
                         Grid.Row="0"
                         HeightRequest="56"
-                        Text=" + " 
-                        WidthRequest="72" />
+                        Text="匚匚" 
+                        WidthRequest="75" />
 
                     <Frame
                         Grid.Column="0"
@@ -80,14 +111,39 @@
                             FullSwipeMode="None"
                             ReduceHeightToContent="True"
                             RowHeight="56"
-                            SelectionMode="None">
+                            SelectionMode="None"
+                            AllowSort="False">
 
                             <dxg:DataGridView.Columns>
-                                <dxg:TextColumn FieldName="L" Caption="匚 CM" Width="12*" HorizontalContentAlignment="Center" />
-                                <dxg:TextColumn FieldName="W" Caption="匚 CM" Width="12*" HorizontalContentAlignment="Center" />
-                                <dxg:TextColumn FieldName="H" Caption="匚 CM" Width="12*" HorizontalContentAlignment="Center" />
-                                <dxg:TextColumn FieldName="V" Caption="匚匚 M³" Width="15*" HorizontalContentAlignment="Center" />
-                                <dxg:TextColumn FieldName="P" Caption="匚匚" Width="12*" HorizontalContentAlignment="Center" />
+                                <dxg:TextColumn 
+                                    Caption="匚 CM"
+                                    FieldName="L"
+                                    HorizontalContentAlignment="Center"
+                                    Width="12*" />
+                                
+                                <dxg:TextColumn 
+                                    Caption="匚 CM" 
+                                    FieldName="W" 
+                                     HorizontalContentAlignment="Center"
+                                    Width="12*" />
+                                
+                                <dxg:TextColumn 
+                                    Caption="匚 CM"
+                                    FieldName="H" 
+                                    HorizontalContentAlignment="Center"
+                                    Width="12*" />
+                                
+                                <dxg:TextColumn 
+                                    Caption="匚匚 M³"
+                                    FieldName="V" 
+                                    HorizontalContentAlignment="Center"
+                                    Width="15*" />
+                                
+                                <dxg:TextColumn 
+                                    Caption="匚匚"
+                                    FieldName="P" 
+                                    HorizontalContentAlignment="Center"
+                                    Width="12*" />
                             </dxg:DataGridView.Columns>
 
                             <dxg:DataGridView.EndSwipeItems>
@@ -96,7 +152,7 @@
                                     BackgroundColor="Crimson"
                                     Caption="匚匚" 
                                     Tap="SwipeItemDelete_Tap"
-                                    Width="72" />
+                                    Width="75" />
                                     <!--16+-->
                             </dxg:DataGridView.EndSwipeItems>
                         </dxg:DataGridView>
