--- a/DXMauiApp1/Pages/Receipt/ReceiptMakeupPage.xaml
+++ b/DXMauiApp1/Pages/Receipt/ReceiptMakeupPage.xaml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DXMauiApp1.Pages.ReceiptUpdatePage"
-             Title="ReceiptUpdatePage">
+             x:Class="DXMauiApp1.Pages.ReceiptMakeupPage"
+             Title="ReceiptMakeupPage">
     <ContentPage.Content>
         <Label
             Text=" " />
+        <!--快递单号、长、宽、高、体积、重量、会员代号-->
     </ContentPage.Content>
 </ContentPage>
